# wmspal

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  STATIC_LINKING.md  build-musl-static.sh  build-static.sh  build.sh  test-cmake.txt  vcpkg.json
.github/workflows/: ci.yml  release.yml
include/: wmspal.h
src/: attribution.c  georeference.c  main.c  vectorize.c  wms.c
